manifest/dev/core-api/deploy-core-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  namespace: dev
spec:
  selector:
    matchLabels:
      app: core-api
  template:
    metadata:
      labels:
        app: core-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: core-api
          image: ghcr.io/flotio-dev/core-api:18.1
          resources:
            limits:
              memory: "256Mi"
              cpu: "1000m"
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: github-app-private-key
              mountPath: /secrets/github-app-private-key
              readOnly: true
      volumes:
        - name: github-app-private-key
          configMap:
            name: github-app-private-key
