manifest/dev/core-api/svc-core-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: dev
spec:
  selector:
    app: core-api
  ports:
  - port: 8080
    targetPort: 8080
