manifest/dev/core-api/ing-core-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-api-ing
  namespace: dev
  labels:
    app.kubernetes.io/name: core-api-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: api-dev.flotio.ovh
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - api-dev.flotio.ovh
      secretName: api-tls
